@@ -197,8 +197,8 @@ gtk_accel_label_finalize (GtkObject *object)
 guint
 gtk_accel_label_accelerator_width (GtkAccelLabel *accel_label)
 {
-  g_return_if_fail (accel_label != NULL);
-  g_return_if_fail (GTK_IS_ACCEL_LABEL (accel_label));
+  g_return_val_if_fail (accel_label != NULL, 0);
+  g_return_val_if_fail (GTK_IS_ACCEL_LABEL (accel_label), 0);
   
   return accel_label->accel_padding + accel_label->accel_string_width;
 }
